--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css-modules-require-hook",
-  "version": "4.2.3",
+  "version": "4.2.3-rc1",
   "description": "A require hook to compile CSS Modules on the fly",
   "main": "lib/index.js",
   "engines": {
@@ -52,7 +52,7 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "generic-names": "^1.0.1",
+    "generic-names": "^2.0.1",
     "glob-to-regexp": "^0.3.0",
     "icss-replace-symbols": "^1.0.2",
     "lodash": "^4.3.0",
